- fixed issues on start up. - changed config file to default naming due to inter dependencies - amended startup script template

--- a/templates/start-node.sh.j2
+++ b/templates/start-node.sh.j2
@@ -2,9 +2,9 @@
 # Environment variables are populated at runtime in /home/cardano/env_vars.sh
 
 cardano-node run \
-  --topology {{ cardano_config_dir }}/topology.json \
-  --config {{ cardano_config_dir }}/config.json \
-  --database-path {{ cardano_install_dir }}/db
-  --socket-path {{ cardano_install_dir }}/socket/$NODE_TYPE \
+  --topology {{ cardano_config_dir }}/{{ cardano_topology_filename }}.json \
+  --config {{ cardano_config_dir }}/{{ cardano_config_filename }} \
+  --database-path {{ cardano_install_dir }}/db \
+  --socket-path {{ cardano_install_dir }}/socket/{{ cardano_node_type }} \
   --host-addr 0.0.0.0 \
   --port {{ cardano_default_port }} \
