--- a/templates/start-node.sh.j2
+++ b/templates/start-node.sh.j2
@@ -2,7 +2,7 @@
 # Environment variables are populated at runtime in /home/cardano/env_vars.sh
 
 cardano-node run \
-  --topology {{ cardano_config_dir }}/{{ cardano_topology_filename }}.json \
+  --topology {{ cardano_config_dir }}/{{ cardano_topology_filename }} \
   --config {{ cardano_config_dir }}/{{ cardano_config_filename }} \
   --database-path {{ cardano_install_dir }}/db \
   --socket-path {{ cardano_install_dir }}/db/node.socket \
