--- a/templates/env_vars.sh.j2
+++ b/templates/env_vars.sh.j2
@@ -3,7 +3,7 @@ CNODE_HOME={{ cardano_install_dir }}
 CARDANO_CLI="{{ cardamo_cli_path }}"
 export MAGIC_PARAM="{{ cardano_magic_prefix }}"
 export CARDANO_NODE_SOCKET_PATH=$CNODE_HOME/db/node.socket
-export CONFIG_JSON={ cardano_config_dir }}/{{ cardano_config_filename }}
+export CONFIG_JSON={{ cardano_config_dir }}/{{ cardano_config_filename }}
 export GENESIS_JSON={{ cardano_config_dir }}/{{ cardano_genesis_filename }}
 export TOPOLOGY_JSON={{ cardano_config_dir }}/{{ cardano_topology_filename }}
 MAGIC=$(jq -r .protocolMagicId < $GENESIS_JSON)
